mobil uygulama klasörü silindi, diğer dosyalarda güncelleme yapıldı

--- a/agentmobil/my_agentt/public/index.html
+++ b/agentmobil/my_agentt/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mastra AI Agent</title>
+    <title>Proje Yönetimi AI Agent</title>
     <style>
         * {
             margin: 0;
@@ -161,14 +161,14 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🤖 Mastra AI Agent</h1>
-            <p>Yardımcı AI asistanınızla sohbet edin</p>
+            <h1>📋 Proje Yönetimi AI Agent</h1>
+            <p>Proje planlaması ve zaman çizelgesi oluşturan yapay zeka asistanınız</p>
         </div>
         
         <div class="chat-container">
             <div class="messages" id="messages">
                 <div class="message agent-message">
-                    Merhaba! Ben sizin AI asistanınızım. Size nasıl yardımcı olabilirim?
+                    Merhaba! Ben proje yönetimi uzmanı AI asistanınızım. Proje adı ve bitiş tarihi vererek size detaylı zaman çizelgesi oluşturabilirim. Size nasıl yardımcı olabilirim?
                 </div>
             </div>
             
@@ -181,7 +181,7 @@
                     type="text" 
                     class="message-input" 
                     id="messageInput" 
-                    placeholder="Mesajınızı yazın..."
+                    placeholder="Proje adı ve bitiş tarihi yazın (örn: Web sitesi projesi, 2024-02-15)..."
                     maxlength="500"
                 >
                 <button class="send-button" id="sendButton">Gönder</button>
